# app

./: .coverage  .pylintrc  Dockerfile  README.md  coverage.xml  kubernetes.yml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: deploy.yml  release.yml
app-frontend/: index.html  server.py
app-frontend/javascript/: logic.js
app-frontend/templates/: index.html
app-service_depricated/: service.py
src/: metrics_init.py  server.py  test_server.py
src/app_frontend/: server.py
src/templates/: error.html  index.html  results.html
tests/: test_server.py
